# Presence-Backend

./: Cargo.toml  README.md
src/: auth.rs  config.rs  crypto.rs  db.rs  error.rs  main.rs  models.rs  response.rs  session.rs
src/routes/: activity.rs  login.rs  login_verify.rs  logout.rs  mod.rs  register.rs  reset_aes.rs
src/tasks/: mod.rs  timeout.rs  token_refresh.rs
src/utils/: mii_utils.rs  mod.rs
