[package]
name = "presence-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Discord RPC library (local)
discord_social_rpc = { path = "../discord_social_rpc" }

# HTTP server
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

# Database (sea-orm with SQLite)
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Crypto
aes = "0.8"
cbc = "0.1"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# Environment
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"

# HTTP client (for Discord OAuth2 calls)
reqwest = { version = "0.12", features = ["json"] }

# Time
chrono = "0.4"
time = "0.3"