[package]
name = "presence-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Discord RPC library (local)
discord_social_rpc = { path = "../discord_social_rpc" }
activity_manager = { path = "../activity_manager" }

# HTTP server
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.7", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

# Database (sea-orm with SQLite)
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Crypto
aes = "0.9"
cbc = "0.2"
sha2 = "0.11"
hex = "0.4"
rand = "0.10"

# Environment
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"

# HTTP client (for Discord OAuth2 calls)
reqwest = { version = "0.13", features = ["json", "form"] }

# URL encoding for form-urlencoded responses
urlencoding = "2"

# Time
chrono = "0.4"
time = "0.3"
